# transcripts18xx

./: .coveragerc  .gitignore  .pylintrc  .readthedocs.yaml  BACKLOG.md  CHANGELOG.md  LICENSE  README.md  game_state.csv  generate_docs.py  main.py  pyproject.toml  read.py  requirements.txt  run_all_tests.py
.github/workflows/: test_pytest.yml
docs/: requirements.txt
docs/source/: conf.py  examples.rst  index.rst  installation.rst  intro.rst  modules.rst  reference.rst  transcripts18xx.engine.rst  transcripts18xx.engine.states.rst  transcripts18xx.engine.steps.rst  transcripts18xx.pipe.rst  transcripts18xx.processing.rst  transcripts18xx.rst  usage.rst
resources/1830/: 1830_202050.txt  1830_202050_parsed.csv
scripts/: from_records.py  parse.py
tests/: context.py  test_games.py  test_mapper.py  test_parsing.py  test_postprocessing.py  test_preprocessing.py  test_transcript.py  test_verification.py
tests/resources/: 1830_201210.txt  1830_201210_final.csv  1830_201210_flattened.csv  1830_201210_game_state.csv  1830_201210_metadata.json  1830_201210_parsed.csv  1830_201210_processed.csv  1830_201210_serialized.json  1830_201210_state.json  1830_201210_states.json  1830_201210_truth.json  1830_202816.json  1889_192767.txt  1889_192767_final.csv  1889_192767_metadata.json  1889_192767_parsed.csv  1889_192767_processed.csv  1889_192767_truth.json
tests/test_engine/: test_engine.py
tests/test_patterns/: test_actions.py  test_events.py  test_mapper.py  test_pattern.py  test_players.py  test_rounds.py
tests/test_pipe/: test_parsing.py  test_parsing_g1830.py  test_parsing_g1889.py  test_verification.py
tests/test_processing/: test_game_state.py  test_gamestate.py  test_postprocessing.py  (+1 more)
transcripts18xx/: __init__.py  game_patterns.py  games.py  mapper.py  parsing.py  postprocessing.py  preprocessing.py  transcript.py  verification.py
(+76 files in other folders)
