[tool.poetry]
name = "transcripts18xx"
version = "0.1.0"
description = "A Python package to preprocess game transcripts from 18xx.games"
authors = ["Pascal <mup0117@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
