[tool.poetry]
name = "transcripts18xx"
version = "4.0.2"
description = "A Python package to preprocess game transcripts from 18xx.games"
authors = ["Pascal <mup0117@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
coverage = "^7.7.1"
sphinx = "^8.2.3"
sphinx-autodoc-typehints = "^3.1.0"
furo = "^2024.8.6"
myst-parser = "^4.0.1"
sphinx-new-tab-link = "^0.8.0"
pylint = "^3.3.8"
sphinx-multiversion = "^0.2.4"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[tool.poetry.scripts]
trx = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
